--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Scanner</title>
     <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    <style>
+        #result {
+            font-size: 18px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>QR Code Scanner</h1>
-    <video id="scanner" width="100%"></video>
+    <video id="video" playsinline></video>
+    <div id="result"></div>
 
     <script>
+        const video = document.getElementById('video');
+        const resultDiv = document.getElementById('result');
+
         // Create a new Instascan scanner
-        let scanner = new Instascan.Scanner({ video: document.getElementById('scanner') });
+        const scanner = new Instascan.Scanner({ video: video });
 
         // Add a listener for when a QR code is scanned
         scanner.addListener('scan', function (content) {
-            alert('Scanned: ' + content);
+            resultDiv.innerText = 'Scanned: ' + content;
         });
 
         // Start the camera
