--- a/index.html
+++ b/index.html
@@ -29,13 +29,10 @@
             resultDiv.innerText = 'Scanned: ' + content;
         });
 
-        // Start the camera with rear-facing preference
+        // Start the camera
         Instascan.Camera.getCameras().then(function (cameras) {
-            const rearCamera = cameras.find(camera => camera.name.toLowerCase().includes('back') || camera.label.toLowerCase().includes('back'));
-
-            if (rearCamera) {
-                scanner.start(rearCamera);
-            } else if (cameras.length > 0) {
+            if (cameras.length > 0) {
+                console.log(cameras)
                 scanner.start(cameras[0]);
             } else {
                 console.error('No cameras found.');
