--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
         // Create a new Instascan scanner
         const scanner = new Instascan.Scanner({ video: video });
 
+        // Add a listener for when a QR code is scanned
+        scanner.addListener('scan', function (content) {
+            resultDiv.innerText = 'Scanned: ' + content;
+        });
+
         // Populate camera selection dropdown
         Instascan.Camera.getCameras().then(function (cameras) {
-            cameras.forEach(function (camera, index) {
+            const rearCameras = cameras.filter(camera => !(camera.name.toLowerCase().includes('front') || camera.label.toLowerCase().includes('front')));
+
+            rearCameras.forEach(function (camera, index) {
                 const option = document.createElement('option');
                 option.value = index;
                 option.text = camera.name || `Camera ${index + 1}`;
@@ -38,8 +45,11 @@
             });
 
             // Set default selected option
-            if (cameras.length > 0) {
+            if (rearCameras.length > 0) {
                 cameraSelection.value = 0;
+                scanner.start(rearCameras[0]);
+            } else {
+                console.error('No rear cameras found.');
             }
         }).catch(function (e) {
             console.error(e);
@@ -48,16 +58,11 @@
         // Add change event listener to select the chosen camera
         cameraSelection.addEventListener('change', function () {
             const selectedCameraIndex = parseInt(cameraSelection.value, 10);
-            const selectedCamera = cameras[selectedCameraIndex];
+            const selectedCamera = rearCameras[selectedCameraIndex];
 
             if (selectedCamera) {
                 scanner.start(selectedCamera);
             }
-        });
-
-        // Add a listener for when a QR code is scanned
-        scanner.addListener('scan', function (content) {
-            resultDiv.innerText = 'Scanned: ' + content;
         });
     </script>
 </body>
