--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>1 Rear Camera Video</title>
 </head>
 <body>
-    <h1>Rear Camera Video</h1>
+    <h1>1 Rear Camera Video</h1>
 
     <!-- Display video stream from the rear camera -->
     <video id="preview" width="640" height="480" autoplay playsinline></video>
