--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         }
 
         #preview {
-            width: 100%; /* Make the video fill the container */
-            max-width: 640px; /* Set a maximum width to prevent it from becoming too large */
+            width: 100%;
+            max-width: calc(100vw - 60px); /* Set maximum width with padding */
+            border-radius: 10px; /* Add rounded corners */
         }
     </style>
 </head>
