--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             background: linear-gradient(to bottom, #add8e6, #87cefa); /* Light blue gradient background */
         }
 
-        #reader {
+        #preview-container {
+            position: relative;
             width: 100%;
             max-width: 300px;
             height: 300px;
@@ -24,34 +25,73 @@
             border-radius: 10px;
             overflow: hidden;
         }
+
+        #qr-content {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 10px;
+            border-radius: 10px;
+            white-space: pre-line;
+        }
     </style>
 </head>
 <body>
-    <!-- Placeholder element for the QR code scanner -->
-    <div id="reader"></div>
+    <!-- Display video stream from the rear camera -->
+    <div id="preview-container">
+        <video id="preview" autoplay playsinline></video>
+    </div>
+
+    <!-- Display scanned content and debug information at the bottom -->
+    <div id="qr-content"></div>
 
     <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
     <script>
-        // Initialize html5-qrcode
-        const html5QrCode = new Html5Qrcode("reader");
+        document.addEventListener('DOMContentLoaded', (event) => {
+            // Access the user's camera with rear-facing preference
+            navigator.mediaDevices.getUserMedia({
+                video: {
+                    facingMode: { exact: 'environment' }
+                }
+            })
+            .then(function (stream) {
+                document.getElementById('preview').srcObject = stream;
 
-        // Start live scanning
-        html5QrCode.start(
-            { fps: 10 },
-            {
-                qrbox: 250,
-            },
-            qrCodeMessage => {
-                // Success callback for live scanning
-                console.log(`Live Scanned Content: ${qrCodeMessage}`);
-                alert(`Live Scanned Content: ${qrCodeMessage}`);
-            },
-            errorMessage => {
-                // Error callback for live scanning
-                console.error(`Live Scanning Error: ${errorMessage}`);
-                alert(`Live Scanning Error: ${errorMessage}`);
-            }
-        );
+                // Initialize QR code scanner
+                const html5QrCode = new Html5Qrcode("preview");
+
+                // Register callback for successful decoding
+                html5QrCode.start(
+                    { fps: 10, qrbox: 250 },
+                    qrCodeMessage => {
+                        const qrContent = document.getElementById('qr-content');
+
+                        // Display scanned content
+                        qrContent.innerText = `Scanned Content: ${qrCodeMessage}`;
+
+                        // Optionally, check if the scanned content is a link
+                        if (qrCodeMessage.toLowerCase().startsWith('http') || qrCodeMessage.toLowerCase().startsWith('https')) {
+                            // Redirect to the scanned link
+                            window.location.href = qrCodeMessage;
+                        }
+
+                        // Optionally, you can hide the content after a certain period
+                        setTimeout(() => {
+                            qrContent.innerText = ''; // Clear the content
+                        }, 5000); // Display for 5 seconds
+                    },
+                    errorMessage => {
+                        // Display error information
+                        console.error(`Error scanning QR code. Reason: ${errorMessage}`);
+                    }
+                );
+            })
+            .catch(function (error) {
+                console.error('Error accessing rear camera: ', error);
+            });
+        });
     </script>
 </body>
 </html>
